# VirtualTeachingAssistant

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  deploy.sh  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml  ci.yml
apps/admin/: README.md  package.json
apps/discord-worker/: Dockerfile  README.md  package.json
course_ta_deployer/: doctor.py
docs/: PHASE-0.md  PHASE-1-STATUS.md  README.md  external-links.md  glossary.md  linux-server.md  roadmap.md
docs/adr/: 0000-template.md  0001-modular-monolith.md  0004-codex-worker.md  (+4 more)
evals/: README.md  run.ts  safety-cases.json  types.ts
infra/: README.md
issues/: 0001-production-identity-and-data-review.md  0002-production-state-and-outbox.md  0003-isolate-agent-workers.md  0004-build-approved-evaluation-suite.md  README.md
reports/: README.md
scripts/: check_architecture.py  check_docs.py  deploy.local.ps1.example  deploy.ps1  pause.ps1  resume.ps1  validate_evals.py
tests/: test_docs.py  test_doctor.py  test_platform_actions.py  test_platform_adapters.py  test_platform_auth.py  test_platform_config.py  test_platform_domain.py  test_platform_fallback.py  test_platform_observability.py  test_platform_registries.py  test_platform_service.py
virtual_teaching_assistant/: __init__.py  cli.py
(+78 files in other folders)
